--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-日報をユーザーが書き終わったあとにそれをリーダーに通知する仕組みを追加したいです
-「提出」というチェックボックスを追加し、そこにチェックがされている状態で「保存」ボタンが押されたら
-自分の認証と認可に設定してあるメールアドレスにメールが送信されるようにしてください。
-難しいですか？今ある機能は絶対に壊さないでください。
+項目	気になる理由	具体的な対処・確認ポイント
+1. メールが飛ばない／遅い	PythonAnywhere + Gmail SMTP は 2024 年末あたりから接続制限が厳しく、smtp.gmail.com:587 がブロックされることがあります。	
+- PythonAnywhere の “Outbound Email” ホワイトリストで Gmail が許可されているか確認
+
+- 送信ログ (logger.error で捕捉済み) をコンソールで tail してタイムアウト/530/535 などの SMTP エラーがないか見る
+
+- 必要なら SendGrid の無料枠か Amazon SES に乗り換え
