処理実行に関するメモを追加し、PowerShellでのサーバー状態確認手順を記載。ログファイルに重複したエントリを追加。

--- a/docs/運用メモ.md
+++ b/docs/運用メモ.md
@@ -1,3 +1,9 @@
+処理実行
+コード修正時のサーバー停止＆再起動
+PowerShellで実行
+「& "C:\tools\nssm\nssm.exe" status daily-report-internal
+& "C:\tools\nssm\nssm.exe" status caddy」
+
 ## 運用メモ（Windows サーバー／Waitress＋IIS or Caddy）
 
 ### 目的
